--- a/packages/planner/package.json
+++ b/packages/planner/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@padel/common": "*",
+    "firebase": "^12.9.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
