--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
   "name": "padel-tournament",
   "private": true,
-  "workspaces": ["packages/*"],
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "dev": "npm -w @padel/runner run dev",
     "build": "npm -w @padel/runner run build",
     "build:all": "npm -w @padel/runner run build && npm -w @padel/planner run build",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "e2e": "npx playwright test",
+    "e2e:ui": "npx playwright test --ui"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@playwright/test": "^1.58.2",
     "@types/node": "^24.10.1",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
